[tool.poetry]
name = "grid-walker"
version = "0.1.0"
description = ""
authors = ["Greg Olmschenk <greg@olmschenk.com>"]
readme = "README.md"
packages = [{include = "grid_walker"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.5"
pynput = "^1.7.6"
rich = "^12.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

